Development Portal (2014-11-13 shi)
==============================
CSS fix for row links
New header titles for different views
Added Translations


Development Portal (2014-11-12 shi)
==============================
Added buttons to tables for year cycle


Development Portal (2014-10-30 shi)
==============================
Fixed publisher view head


Development Portal (2014-10-29 shi)
==============================
Added publishers page for comparison
New crumbs for new publisher view
Added translations
Fixed all table hover text
Deleted extra table column hover style
Added link to table row for publisher view


Development Portal (2014-10-23 shi)
==============================
Edited README
Changed main link from publishers to main page
Added publisher name to crumbs


Development Portal (2014-10-23 Kriss)
==============================
Fixed css for alerts in table
Fixed bug in map view of publisher view where locations not 
contained in a single country where getting ignored.


Development Portal (2014-10-01 shi)
==============================
a:focus links css


Development Portal (2014-09-25 shi)
==============================
Added logo link back to generator
Updated descriptions and instructions for generator
Added SAVi views and instructions
Added toggle link for screenshots
Added SAVi screenshot
Added activity list and screenshot


Development Portal (2014-09-22 shi)
==============================
Link rearranged
Added hover text for generator screenshots


Development Portal (2014-09-10 shi)
==============================
Changes from Github issues
Reworded instructions and options
Fixed sorting for VIEW options
Fixed width of widgets in preview


Development Portal (2014-09-09 shi)
==============================
Add "FIX SIZE" as last step in widget
Omit "FIX SIZE" with new update
Added more instructions to widget
Added screenshots to widget


Development Portal (2014-09-04 shi)
==============================
Firefox fix widget height