@@ -58,11 +58,14 @@
 #about_data_quality_text 
 关于数据质量
 
-#beige_alert_text
+#beige_alert1_text
 d-portal.org还处于非常早期的开发中，预计Alpha版本四月中旬。感谢您的耐心等待！请提供反馈意见
 
 #beige_alert_here_text
 这里
+
+#beige_alert_text
+目前d-portal.org是处于测试阶段。
 
 #mainback_tip_text
 回到发展门户
