@@ -58,11 +58,14 @@ About this data
 #about_data_quality_text
 About data quality
 
-#beige_alert_text
+#beige_alert1_text
 d-portal.org is still in very early development and scheduled for Alpha release mid-April. Thank you for your patience! Please provide any feedback
 
 #beige_alert_here_text
 here
+
+#beige_alert_text
+d-portal.org is currently in BETA.
 
 #mainback_tip_text
 Back to Development Portal
