@@ -58,11 +58,14 @@ icône d'information
 #about_data_quality_text 
 À propos de la qualité des données
 
-#beige_alert_text 
+#beige_alert1_text 
 d-portal.org est encore en développement très tôt et prévue pour Alpha version mi-Avril. Merci de votre patience! S'il vous plaît fournir des informations 
 
 #beige_alert_here_text 
 ici
+
+#beige_alert_text
+d-portal.org est actuellement en version bêta.
 
 #mainback_tip_text 
 Retour à Portail de Développement
