@@ -26,7 +26,9 @@
 <tr><td colspan="100">{spinner}</td></tr>
 
 #beige
-
+<div class="beigealert_wrap">
+	<div class="beigealert"><img src="{flava}alert_icon.png" alt="{alert_icon_alt_text}" width="15" height="15"> {beige_alert_text} </div>
+</div>
 
 #beige0
 <div class="beigealert_wrap">
