@@ -58,11 +58,14 @@
 #about_data_quality_text 
 डेटा की गुणवत्ता के बारे में
 
-#beige_alert_text
+#beige_alert1_text
 d-portal.org बहुत जल्दी विकास में अब भी है और अल्फा रिलीज मध्य अप्रैल के लिए अनुसूचित. आपके धैर्य के लिए धन्यवाद ! किसी भी प्रतिक्रिया दें
 
 #beige_alert_here_text
 यहां
+
+#beige_alert_text
+d-portal.org बीटा में है.
 
 #mainback_tip_text
 विकास को पोर्टल पर
