@@ -58,11 +58,14 @@
 #about_data_quality_text 
 データ品質について
 
-#beige_alert_text
+#beige_alert1_text
 d-portal.org は非常に初期のまだ開発中で、アルファリリース中旬4月に予定。あなたの忍耐をありがとう！すべてのフィードバックを提供してください
 
 #beige_alert_here_text
 ここに
+
+#beige_alert_text
+d-portal.orgは現在ベータ版です。
 
 #mainback_tip_text
 戻る開発ポータルへ
