@@ -58,11 +58,14 @@ Sobre estos datos
 #about_data_quality_text 
 Acerca de la calidad de datos
 
-#beige_alert_text 
+#beige_alert1_text 
 d-portal.org está todavía en desarrollo muy temprano y programado para Alpha liberación a mediados de abril. Gracias por su paciencia! Por favor proporcione cualquier información 
 
 #beige_alert_here_text 
 aquí
+
+#beige_alert_text
+d-portal.org se encuentra actualmente en beta.
 
 #mainback_tip_text
 Volver a la Portal de Desarrollo
