@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>{about_title_text}</title>
 	<script src="{root}jslib/jquery.js"></script>
+	<style>.navi{padding-top:40px;}.beigealert_wrap{position:fixed;z-index:999;}</style>
 	<link  href="{root}art/original/ctrack.css" rel="stylesheet" type="text/css" >
 	<link  href="about.css" rel="stylesheet" type="text/css" >
 {ganal}
@@ -255,3 +256,4 @@
 	</div>
 	</div>
 </div>
+
