@@ -12,6 +12,7 @@
 {jsmenu}
 	</head> 
 <body>
+	{beige}
 <div class="portal">
 	<div class="main_wrap">
 		<div id="background_image"></div>
@@ -98,6 +99,11 @@
 </div>
 </body>
 </html>
+
+#beige
+<div class="beigealert_wrap">
+	<div class="beigealert"><img src="{root}art/alert_icon.png" alt="Alert icon" width="15" height="15"> d-portal.org is currently in BETA. </div>
+</div>
 
 #country_select
 <li>
