@@ -1,3 +1,8 @@
+Static site (2014-11-14 shi)
+==============================
+Added Beta alert and temp style changes
+
+
 Static site (2014-11-12 shi)
 ==============================
 Edit text on index page
